Fix fullfilment shipped mailer template
Fullfilment shipped mailer template is using cancellation header.

--- a/storefront/app/views/workarea/storefront/fulfillment_mailer/shipped.html.haml
+++ b/storefront/app/views/workarea/storefront/fulfillment_mailer/shipped.html.haml
@@ -1,7 +1,7 @@
 = append_partials('storefront.fulfillment_shipped_mailer.top')
 
 - content_for :preheader_text do
-  = t('workarea.storefront.email.order_cancellation.heading', order_id: @order.id)
+  = t('workarea.storefront.email.order_shipped.heading', order_id: @order.id)
 
 %tr
   %td
