Add privacy popup
When enabled, this shows a popup blocking interaction until
the visitor consents to cookie use.

It's disabled by default.

--- a/storefront/app/assets/javascripts/workarea/storefront/application.js.erb
+++ b/storefront/app/assets/javascripts/workarea/storefront/application.js.erb
@@ -136,6 +136,7 @@
     workarea/storefront/modules/optional_fields
     workarea/storefront/modules/traffic_referrer
     workarea/storefront/modules/lazy_images
+    workarea/storefront/modules/privacy_popup
   ).each do |asset|
     require_asset asset
   end
