Fix Promo Code Counts in Admin
Previously, promo codes could only be generated once through the admin,
so rendering the count of all promo codes as the count requested to be
generated was working out. However, as CSV imports and API updates became
more widespread, this began to break down as the `#count` field would
have to be updated each time a new set of promo codes were added.
Instead of reading from this pre-defined field on the code list, render
the actual count of promo codes from the database on the code list and
promo codes admin pages.

WORKAREA-199

--- a/admin/app/views/workarea/admin/pricing_discount_code_lists/_cards.html.haml
+++ b/admin/app/views/workarea/admin/pricing_discount_code_lists/_cards.html.haml
@@ -45,7 +45,7 @@
             .grid
               .grid__cell.grid__cell--50
                 .align-center
-                  %h2.heading.heading--no-margin= model.count
+                  %h2.heading.heading--no-margin= model.promo_codes.count
                   %p #{t('workarea.admin.pricing_discount_code_lists.cards.promo_codes.total')}
               .grid__cell.grid__cell--50
                 .align-center
