--- a/admin/app/views/workarea/admin/releases/show.html.haml
+++ b/admin/app/views/workarea/admin/releases/show.html.haml
@@ -32,7 +32,11 @@
 
             - else
               .grid__cell
-                - if current_release.try(:id) == @release.id
+                - if @release.published? && !@release.scheduled?
+                  = link_to t('workarea.admin.releases.show.visit_storefront_to_preview'), '#cannot-preview-info', disabled: 'disabled', data: { tooltip: '' }, class: 'workflow-bar__button workflow-bar__button--update'
+                  #cannot-preview-info.tooltip-content
+                    %p= t('workarea.admin.releases.show.unscheduled_republish_preview_info')
+                - elsif current_release.try(:id) == @release.id
                   = link_to t('workarea.admin.releases.show.visit_storefront_to_preview'), storefront.root_path, class: 'workflow-bar__button workflow-bar__button--update'
                 - else
                   = form_tag release_session_path, method: :post do
