Update inventory and fulfillment sku policy info text, allow appending

--- a/admin/app/views/workarea/admin/inventory_skus/new.html.haml
+++ b/admin/app/views/workarea/admin/inventory_skus/new.html.haml
@@ -28,7 +28,9 @@
             = link_to '#tracking-policy-info', data: { tooltip: '' } do
               = inline_svg('workarea/admin/icons/help.svg', class: 'svg-icon svg-icon--small svg-icon--blue', title: t('workarea.admin.inventory_skus.edit.tracking_policy'))
           #tracking-policy-info.tooltip-content
-            %p= t('workarea.admin.inventory_skus.edit.tracking_policy_info_html')
+            %p
+              = t('workarea.admin.inventory_skus.edit.tracking_policy_info_html')
+              = append_partials('admin.inventory_sku_policy_info')
           = select_tag 'sku[policy]', options_for_select(inventory_policies, @sku.policy.optionize)
 
         .property
