--- a/admin/app/assets/javascripts/workarea/admin/application.js.erb
+++ b/admin/app/assets/javascripts/workarea/admin/application.js.erb
@@ -14,6 +14,7 @@ window.feature.testAll();
     jquery3
     jquery_ujs
     jquery_ujs/replace
+    jquery_ujs/insert
     jquery-ui/core
     jquery-ui/widget
     jquery-ui/position
