Add modifier for better disabled workflow button display
This makes it visually clearer that a workflow button is disabled.

--- a/admin/app/assets/stylesheets/workarea/admin/components/_workflow_bar.scss
+++ b/admin/app/assets/stylesheets/workarea/admin/components/_workflow_bar.scss
@@ -117,3 +117,8 @@ $workflow-bar-button-confirm-delete-hover-bg-color:  $bright-red !default;
             background-color: $workflow-bar-button-confirm-delete-hover-bg-color;
         }
     }
+
+    .workflow-bar__button--disabled {
+        opacity: $forms-disabled-opacity;
+        cursor: not-allowed;
+    }
