Remove port from host configuration in installer
Ports aren't part of hosts, this causes problems when the value is used
like a true host.

This PR also fixes mailer links with missing ports as a result of this
change.

--- a/core/lib/generators/workarea/install/templates/initializer.rb.erb
+++ b/core/lib/generators/workarea/install/templates/initializer.rb.erb
@@ -4,7 +4,7 @@ Workarea.configure do |config|
 
   config.host = {
     'test' => 'www.example.com',
-    'development' => 'localhost:3000',
+    'development' => 'localhost',
     'production' => 'www.<%= app_name.dasherize %>.com' # TODO
   }[Rails.env]
 
