Show User Login Tracking Info in Admin
Display the `last_login_at` and `last_login_attempted_at` properties of a User on the attributes card in admin.

WORKAREA-258

--- a/admin/app/views/workarea/admin/users/_cards.html.haml
+++ b/admin/app/views/workarea/admin/users/_cards.html.haml
@@ -35,6 +35,12 @@
                 = link_to model.created_by.name, user_path(model.created_by)
               - else
                 = t('workarea.admin.users.cards.not_applicable')
+            %li
+              %strong= t('workarea.admin.fields.last_login_at')
+              = model.last_login
+            %li
+              %strong= t('workarea.admin.fields.last_login_attempt_at')
+              = model.last_login_attempt
 
             - unless model.admin?
               %li
