--- a/admin/app/views/workarea/admin/shared/_primary_nav.html.haml
+++ b/admin/app/views/workarea/admin/shared/_primary_nav.html.haml
@@ -52,6 +52,7 @@
           %li{ class: "primary-nav__item" }= link_to t('workarea.admin.shared.primary_nav.pricing'), pricing_skus_path, class: navigation_link_classes(pricing_skus_path)
           %li{ class: "primary-nav__item" }= link_to t('workarea.admin.shared.primary_nav.inventory'), inventory_skus_path, class: navigation_link_classes(inventory_skus_path)
           %li{ class: "primary-nav__item" }= link_to t('workarea.admin.shared.primary_nav.fulfillment'), fulfillment_skus_path, class: navigation_link_classes(fulfillment_skus_path)
+          %li{ class: "primary-nav__item" }= link_to t('workarea.admin.shared.primary_nav.shipping'), shipping_skus_path, class: navigation_link_classes(shipping_skus_path)
           = append_partials('admin.catalog_menu')
 
       .primary-nav__section
