--- a/admin/app/views/workarea/admin/inventory_skus/_cards.html.haml
+++ b/admin/app/views/workarea/admin/inventory_skus/_cards.html.haml
@@ -12,6 +12,9 @@
               %strong= t('workarea.admin.fields.policy')
               = model.policy.titleize.presence
             %li
+              %strong= t('workarea.admin.fields.sellable')
+              = model.sellable
+            %li
               %strong= t('workarea.admin.fields.available')
               = model.available
             %li
