--- a/admin/app/views/workarea/admin/inventory_skus/index.html.haml
+++ b/admin/app/views/workarea/admin/inventory_skus/index.html.haml
@@ -46,6 +46,7 @@
                 = check_box_tag 'select_all', nil, false, id: 'select_all', class: 'checkbox__input', data: { bulk_action_select_all: '' }
                 = label_tag 'select_all', t('workarea.admin.bulk_actions.select_all'), class: 'checkbox__label'
             %th= t('workarea.admin.fields.sku')
+            %th.align-center= t('workarea.admin.fields.sellable')
             %th.align-center= t('workarea.admin.fields.available')
             %th.align-center= t('workarea.admin.fields.sold')
             %th.align-center= t('workarea.admin.fields.backordered_units')
@@ -62,6 +63,7 @@
               %td
                 = link_to result.id, inventory_sku_path(result)
                 = upcoming_changesets_icon_for(result)
+              %td.align-center= result.sellable
               %td.align-center= result.available
               %td.align-center= result.purchased
               %td.align-center= result.backordered
