Improve display of disabled toggles
When a toggle button is disabled, it should reflect that visually
instead of just looking like it should be functional.

--- a/admin/app/assets/stylesheets/workarea/admin/components/_toggle_button.scss
+++ b/admin/app/assets/stylesheets/workarea/admin/components/_toggle_button.scss
@@ -20,6 +20,10 @@ $toggle-button-status-negative-color:  $red !default;
     display: inline-block;
 }
 
+.toggle-button--disabled {
+    opacity: 0.5;
+}
+
     /**
      * 1. provides positiioning context for `.toggle-button__label`
      * 2. height + vertical margin = `.text-box` height
