--- a/admin/app/views/workarea/admin/configurations/types/_encrypted.html.haml
+++ b/admin/app/views/workarea/admin/configurations/types/_encrypted.html.haml
@@ -1,1 +1,1 @@
-.property= password_field_tag "configuration[#{field.key}]", value, class: 'text-box', required: !field.allow_blank?
+.property= password_field_tag "configuration[#{field.key}]", value, class: 'text-box', required: field.required?
