--- a/admin/app/views/workarea/admin/configurations/types/_string.html.haml
+++ b/admin/app/views/workarea/admin/configurations/types/_string.html.haml
@@ -1,1 +1,1 @@
-= text_field_tag "configuration[#{field.key}]", value, class: 'text-box', required: !field.allow_blank?
+= text_field_tag "configuration[#{field.key}]", value, class: 'text-box', required: field.required?
