Add sitemap generation
WORKAREA-255

--- a/storefront/app/views/workarea/storefront/pages/robots.text.erb
+++ b/storefront/app/views/workarea/storefront/pages/robots.text.erb
@@ -1,5 +1,6 @@
 User-Agent: *
 Allow: <%= sitemap_path %>
+Sitemap: https://<%= Workarea.config.host %>/sitemap.xml.gz
 <% if !Rails.env.production? %>
 Disallow: /
 <% else %>
