Fix Precision of Tax Rates UI
The `:step` values of the new/edit forms and precision configuration for
`#number_to_percentage` were not only rounding certain tax rates to an
incorrect number, but were also showing a bunch of insignificant zeroes
in the admin for tax rates. To resolve this, configure
`#number_to_percentage` to have 3-decimal precision, and strip all
insignificant zeroes from the display, leaving the admin with a much
nicer percentage display than what was presented before.

WORKAREA-278

--- a/admin/app/views/workarea/admin/tax_rates/edit.html.haml
+++ b/admin/app/views/workarea/admin/tax_rates/edit.html.haml
@@ -21,7 +21,7 @@
         .grid__cell.grid__cell--50
           .property
             = label_tag 'rate_country_percentage', t('workarea.admin.tax_rates.index.table.country_percentage'), class: 'property__name'
-            = number_field_tag 'rate[country_percentage]', @rate.country_percentage * 100, min: 0, max: 100, step: 0.01, class: 'text-box text-box--i18n'
+            = number_field_tag 'rate[country_percentage]', @rate.country_percentage * 100, min: 0, max: 100, step: '0.001', class: 'text-box text-box--i18n'
 
         .grid__cell.grid__cell--50
           .property
@@ -31,7 +31,7 @@
         .grid__cell.grid__cell--50
           .property
             = label_tag 'rate_region_percentage', t('workarea.admin.tax_rates.index.table.region_percentage'), class: 'property__name'
-            = number_field_tag 'rate[region_percentage]', @rate.region_percentage * 100, min: 0, max: 100, step: 0.01, class: 'text-box text-box--i18n'
+            = number_field_tag 'rate[region_percentage]', @rate.region_percentage * 100, min: 0, max: 100, step: '0.001', class: 'text-box text-box--i18n'
 
         .grid__cell.grid__cell--50
           .property
@@ -41,7 +41,7 @@
         .grid__cell.grid__cell--50
           .property
             = label_tag 'rate_postal_code_percentage', t('workarea.admin.tax_rates.index.table.postal_code_percentage'), class: 'property__name'
-            = number_field_tag 'rate[postal_code_percentage]', @rate.postal_code_percentage * 100, min: 0, max: 100, step: 0.01, class: 'text-box text-box--i18n'
+            = number_field_tag 'rate[postal_code_percentage]', @rate.postal_code_percentage * 100, min: 0, max: 100, step: '0.001', class: 'text-box text-box--i18n'
 
         .grid__cell.grid__cell--33
           .property
