Improve clarity of discount verbiage
This hopes to address some recent confusion around how the discount
works.

--- a/admin/app/views/workarea/admin/pricing_discounts/properties/_product_attribute.html.haml
+++ b/admin/app/views/workarea/admin/pricing_discounts/properties/_product_attribute.html.haml
@@ -5,7 +5,7 @@
     %span.discount__node
       %span.property.property--inline
         = text_field_tag 'discount[amount]', @discount.amount, class: 'text-box text-box--small', title: 'Amount of Discount', placeholder: '10', required: true
-    %span.discount__node off products
+    %span.discount__node off the item's unit price
 
 .discount__node-line
   %p.discount__node-group
