Clean up search settings UI
This UI really needed a little TLC.

--- a/admin/app/assets/stylesheets/workarea/admin/settings/_grid.scss
+++ b/admin/app/assets/stylesheets/workarea/admin/settings/_grid.scss
@@ -9,7 +9,7 @@
  */
 
 $av-gutter:  $spacing-unit;
-$av-widths:  (2, 3, 4, 5);
+$av-widths:  (2, 3, 4, 5, 10);
 
 $av-breakpoint-class-chain:  '-at-';
 $av-width-class-style:       'percent';
