--- a/admin/app/views/workarea/admin/search_settings/show.html.haml
+++ b/admin/app/views/workarea/admin/search_settings/show.html.haml
@@ -10,45 +10,62 @@
     = form_tag search_settings_path, method: :patch, data: { unsaved_changes: '' } do
       .tabs
         .tabs__panel
-          %h2.tabs__heading= t('workarea.admin.search_settings.show.synonyms.title')
-          %p= t('workarea.admin.search_settings.show.synonyms.description')
-          %p= t('workarea.admin.search_settings.show.synonyms.simple_example_description')
-          %pre
-            :preserve
-              #{t('workarea.admin.search_settings.show.synonyms.simple_example')}
-          %p= t('workarea.admin.search_settings.show.synonyms.phrase_example_description')
-          %pre
-            :preserve
-              #{t('workarea.admin.search_settings.show.synonyms.phrase_example')}
+          %h2.tabs__heading= t('workarea.admin.search_settings.show.filters.title')
+          .section
+            .grid.grid--center
+              .grid__cell.grid__cell--50
+                %p.align-center= t('workarea.admin.search_settings.show.filters.description')
 
-          %p= text_area_tag 'synonyms', @settings.synonyms, class: 'text-box text-box--multi-line text-box--wide', title: 'Synonyms'
+                .property
+                  = label_tag 'terms_facets_list', t('workarea.admin.search_settings.show.filters.title'), class: 'property__name'
+                  = text_field_tag 'terms_facets_list', @settings.terms_facets_list, class: 'text-box'
+                  %span.property__note= t('workarea.admin.form.csv_field_note')
+
+                = render 'workarea/admin/facets/price_inputs', facet: @price_facets
 
         .tabs__panel
-          %h2.tabs__heading= t('workarea.admin.search_settings.show.filters.title')
-          %p= t('workarea.admin.search_settings.show.filters.description')
+          %h2.tabs__heading= t('workarea.admin.search_settings.show.synonyms.title')
+          .grid.grid--center
+            .grid__cell.grid__cell--50
+              .section.align-center
+                %p= text_area_tag 'synonyms', @settings.synonyms, class: 'text-box text-box--multi-line', title: 'Synonyms'
 
-          .property
-            = label_tag 'terms_facets_list', t('workarea.admin.search_settings.show.filters.title'), class: 'property__name'
-            = text_field_tag 'terms_facets_list', @settings.terms_facets_list, class: 'text-box'
-            %span.property__note= t('workarea.admin.form.csv_field_note')
+              .section.align-center
+                %span= t('workarea.admin.search_settings.show.synonyms.description_html', customizations_path: search_customizations_path)
 
-          = render 'workarea/admin/facets/price_inputs', facet: @price_facets
+              .section.align-center
+                %span= t('workarea.admin.search_settings.show.synonyms.simple_example_description')
+                %pre
+                  :preserve
+                    #{t('workarea.admin.search_settings.show.synonyms.simple_example')}
+
+              .section.align-center
+                %span= t('workarea.admin.search_settings.show.synonyms.phrase_example_description')
+                %pre
+                  :preserve
+                    #{t('workarea.admin.search_settings.show.synonyms.phrase_example')}
 
         .tabs__panel
           %h2.tabs__heading= t('workarea.admin.search_settings.show.boosts.title')
-          .grid
-            .grid__cell.grid__cell--50
-              %h3= t('workarea.admin.search_settings.show.boosts.product_popularity')
-              %p= t('workarea.admin.search_settings.show.boosts.product_popularity_description')
-              = text_field_tag 'views_factor', @settings.views_factor, class: 'text-box text-box--small'
+          .section
+            .grid
+              .grid__cell.grid__cell--50.align-center
+                %h3= t('workarea.admin.search_settings.show.boosts.product_popularity')
+                %p= t('workarea.admin.search_settings.show.boosts.product_popularity_description')
+                .grid.grid--middle
+                  .grid__cell.grid__cell--10.align-right= t('workarea.admin.search_settings.show.boosts.disabled')
+                  .grid__cell.grid__cell--50= range_field_tag 'views_factor', @settings.views_factor, min: 0, max: 2, step: 0.01, class: 'text-box text-box--wide'
+                  .grid__cell.grid__cell--10.align-left= t('workarea.admin.search_settings.show.boosts.max')
 
-            .grid__cell.grid__cell--50
-              %h3= t('workarea.admin.search_settings.show.boosts.field_weight')
-              %p= t('workarea.admin.search_settings.show.boosts.field_weight_description')
-              - @settings.boosts.each do |field, value|
-                .property
-                  = label_tag "boosts[#{field}]", field.to_s.titleize, class: 'property__name'
-                  = text_field_tag "boosts[#{field}]", value, class: 'text-box text-box--small'
+              .grid__cell.grid__cell--50.align-center
+                %h3= t('workarea.admin.search_settings.show.boosts.field_weight')
+                .grid
+                  .grid__cell.grid__cell--50
+                    %p= t('workarea.admin.search_settings.show.boosts.field_weight_description')
+                - @settings.boosts.each do |field, value|
+                  .property
+                    = label_tag "boosts[#{field}]", field.to_s.titleize, class: 'property__name'
+                    = range_field_tag "boosts[#{field}]", value, min: 0, max: 5, step: 0.1, class: 'text-box text-box--medium'
 
       .workflow-bar
         .grid.grid--auto.grid--right.grid--middle
