Update display of release changeset to handle large changesets
WORKAREA-310

--- a/admin/app/views/workarea/admin/changesets/index.html.haml
+++ b/admin/app/views/workarea/admin/changesets/index.html.haml
@@ -13,12 +13,31 @@
   .view__container
     = render_cards_for(@release, :planned_changes)
 
-    - if @release.changesets_with_releasable.blank?
+    - if @release.changeset_count.zero?
       .section.align-center
         %p.heading.heading--3= t('workarea.admin.changesets.no_changesets')
         %p.heading.heading--3= link_to t('workarea.admin.changesets.plan_some_changes'), release_releasables_path(@release)
 
+    .browsing-controls.browsing-controls--with-divider
+      %p.browsing-controls__count{ data: { browsing_controls_count: @release.changeset_count } }
+        = t('workarea.admin.changesets.pluralize_change', count: @release.changeset_count)
+
+
     .grid.grid--center
+      - if @release.show_changeset_summary?
+        .grid__cell.grid__cell--80-at-medium
+          .section
+            .grid.grid--center.grid--auto
+              - @release.changeset_summary.each do |summary|
+                .grid__cell
+                  .card.card--button
+                    = link_to search_path(type: [summary.type_filter], upcoming_changes: [@release.id]), class: 'card__header' do
+                      .card__header-text #{summary.count} #{summary.label}
+                      = releaseable_icon summary, { class: 'card__icon'}
+
+        .grid__cell.grid__cell--80-at-medium
+          %h2.align-center= t('workarea.admin.changesets.recent')
+
       .grid__cell.grid__cell--80-at-medium
         %ul.list-reset
           - @release.changesets_with_releasable.each do |changeset|
@@ -42,3 +61,7 @@
                 .release-changeset__body
                   - changeset.changed_fields.each do |field|
                     = render_changeset_field(changeset, field)
+
+          - if @release.show_changeset_summary?
+            %li.text.text--large.align-center
+              = link_to t('workarea.admin.cards.more', amount: @release.changeset_count - Workarea.config.per_page ), search_path(upcoming_changes: [@release.id])
