--- a/admin/app/views/workarea/admin/releases/_cards.html.haml
+++ b/admin/app/views/workarea/admin/releases/_cards.html.haml
@@ -62,27 +62,18 @@
 
       - if local_assigns[:active].blank?
         .card__body
-          - if model.changesets_with_releasable.empty?
+          - if model.changeset_count.zero?
             %p.card__empty-note= t('workarea.admin.releases.cards.planned_changes.empty_note')
             = link_to release_changesets_path(model), class: 'card__button' do
               %span.button.button--small= t('workarea.admin.releases.cards.planned_changes.button')
           - else
-            - model.changesets_with_releasable.take(3).each do |changeset|
-
-              .activity
-                .activity__header
-                  .activity__avatar
-                    = changeset_icon changeset, { class: 'svg-icon'}
-                  .activity__name= changeset.name
-                  .activity__time
-                    = changeset.publish_humanized
-                    - if changeset.release_date.present?
-                      = local_time(changeset.release_date, :long)
-                .activity__message
-                  .release-changeset.release-changeset--activity
-                    .release-changeset__body
-                      - changeset.changed_fields.each do |field|
-                        = render_changeset_field(changeset, field)
+            %table
+              %tbody
+                - model.changeset_summary.each do |summary|
+                  %tr
+                    %td.align-right
+                      %strong= summary.count
+                    %td= summary.label
 
             = link_to release_changesets_path(model), class: 'card__button' do
               %span.button.button--small= t('workarea.admin.releases.cards.planned_changes.button')
