Add warning message to release show page when change count is large
WORKAREA-315

--- a/admin/app/views/workarea/admin/releases/show.html.haml
+++ b/admin/app/views/workarea/admin/releases/show.html.haml
@@ -11,6 +11,9 @@
         = render_aux_navigation_for(@release)
 
   .view__container
+    - if @release.large?
+      .grid.grid--center.grid--auto
+        .grid__cell= render_message 'warning', t('workarea.admin.releases.show.large_changeset_warning')
     = render_cards_for(@release)
 
     .workflow-bar
